feat: add webhooks
* feat-add webhooks

* feat: add possibility to refresh webhook and remove name from it

* chore: remove unused endpoints

* test: add tests for webhooks

* docs: update swagger

* docs: update README

* fix: fix linter error

* chore: refactor code

* feat: prepare client for webhooks http requests

* feat: add endpoint to check webhook status

* chore: update swagger and README after rebase

* chore: refactor tests and service after new test structure

* chore: refactor handler and reset viper in tests
